# void_wm

./: Cargo.toml  Makefile  README.md  install-deps.sh  void_wm  void_wm.c
src/: main.cpp  output.cpp  output.hpp  server.cpp  server.hpp  wlr_wrapper.c  wlr_wrapper.h
src/renderer/: background.cpp  background.hpp  renderer.cpp  renderer.hpp
